--- a/main.html
+++ b/main.html
@@ -7,10 +7,58 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>Feedback Form</h1>
+    <form action="#" method="POST">
+        <div>
+            <label for="name">Name</label>
+            <input type="text"  id = "name" name="name" placeholder="name"  minlength="3" maxlength="50">
+        </div>
+        <div>
+            <label for="portfolio">Portfolio</label>
+            <input type="url"  id = "portfolio" name="portfolio" placeholder="portfolio">
+        </div>
 
+        <div>
+            <label for="favcolor">Favcolor</label>
+            <input type="radio" name="fac" id="favcolor">Red
+            <input type="radio" name="fac" id="favcolor">Blue
+        </div>
+
+		<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="img1.jpg" style="width:100%">
+    <div class="text">Caption Text</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="img2.jpg" style="width:100%">
+    <div class="text">Caption Two</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="img3.jpg" style="width:100%">
+    <div class="text">Caption Three</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+    </form>
+    
 </body>
 
 </html>
