--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
             <input type="radio" name="fac" id="favcolor">Blue
         </div>
 
-<div class="likeness">
+<div id="likeness">
   <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
 </div>
     </form>
