--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
         </div>
 
 <div id="likeness">
-  <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+  <input type="range" min="1" max="100" value="50" class="slider" id="likeness">
 </div>
     </form>
     
