--- a/main.html
+++ b/main.html
@@ -20,14 +20,14 @@
 
         <div>
             <label for="favcolor">Favcolor</label>
-            <input type="radio" name="fac" id="favcolor">Red
-            <input type="radio" name="fac" id="favcolor">Blue
+            <input type="radio" name="fac" id="favColor">Red
+            <input type="radio" name="fac" id="favColor">Blue
         </div>
 
 <div class="likeness">
   <input type="range" min="1" max="100" value="50" class="slider" id="likeness">
 </div>
-    </form>
+ </form>
     
 </body>
 
