--- a/main.html
+++ b/main.html
@@ -11,21 +11,21 @@
     <form action="#" method="POST">
         <div>
             <label for="name">Name</label>
-            <input type="text"  id = "name" name="name" placeholder="name"  minlength="3" maxlength="50">
+            <input id = "name" type="text"   minlength="3" maxlength="50">
         </div>
         <div>
             <label for="portfolio">Portfolio</label>
-            <input type="url"  id = "portfolio" name="portfolio" placeholder="portfolio">
+            <input id = "portfolio" type="url"   name="portfolio" placeholder="portfolio">
         </div>
 
         <div>
-            <label for="favcolor">Favcolor</label>
-            <input type="radio" name="fac" id="favColor">Red
-            <input type="radio" name="fac" id="favColor">Blue
+            <label for="favColor">Favcolor</label>
+            <input id="favColor" type="color" name="fac" >Red
+            <input id="favColor" type="color" name="fac" >Blue
         </div>
 
 <div class="likeness">
-  <input type="range" min="1" max="100" value="50" class="slider" id="likeness">
+  <input type="range" min="1" max="100"  id="likeness">
 </div>
  </form>
     
